--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Mark Porter"
-description: "I am a Computer Science Co-op student at the University of Waterloo."
-about: "This is a website designed to serve as my personal site to show work that I've done."
+description: ""
+about: "This is a website designed to serve as my personal site to show work that I've done. I am a Computer Science Co-op student at the University of Waterloo."
 location: "Waterloo, Canada"
 email: markporter4321@gmail.com
 baseurl: ""
