--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: markporter4321@gmail.com
 baseurl: ""
 url: "http://markzporter.me" # replace by your site's url
 linkedin_username: markzporter
-github_username:  ladyashburnham
+github_username:  markzporter
 
 # google analytics tracking code, please change the value
 g_analytics: "UA-85020443-1"
