--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,6 +6,6 @@
   link: "https://github.com/markzporter/applet-animation"
   description: "A Java applet that's based off Galaga and does an animation of a game."
 
-- name: Zodiac 
-  link: "https://github.com/markzporter/zodiac"
-  description: "A program written in Java that tells you your zodiac sign based on your birthday."
+- name: Viaduct
+  link: "https://youtu.be/YgVTQjAkkjo"
+  description: "A contest-winning one minute pitch for an innovative company idea in the emerging energy market space."
